--- a/todo.txt
+++ b/todo.txt
@@ -16,10 +16,6 @@ hallway names
 
 A way to show a path through the school to a selected room(Pathfinding Algorithim)
 
-an easy way to edit so that if/when teachers leave, we can easily update room information, also update for each term (also in case of maintenance, closures, and accidential misinformation)
-
-Make a google form to report mistakes
-
 add where you can get food for lunch- lunch menus?
 
 Find a way to hide the database from searching  https://school-website.codeeatspennies.repl.co/database.xml, if no way, just rename to something like hsdkvvyuvfkuyvskducyzskudyvkuyzskuyekuzysekdjgvbkzshgdzv.xml
@@ -30,11 +26,7 @@ Ask where the user is in the school, set a cookie, ask when finding a route to s
 
 Talk to admininstration, host a volunteering oppurtunity for Spanish, German, French, and Chinese students to translate website content (mainly Spanish)
 
-Banner to oasd homepage, announcements and such
-
 Make a Teacher and Room page
-
-Tool to trnlsate sheet into xml database
 
 Have admin page to make a database, when database file uploaded give a summary of what will hapen, (ie: 
 teacher page: john doe will be deleted
@@ -42,3 +34,5 @@ room page: 7832 will be added
 ) for all changes, ask for password again. Admin page will just replace the database and create html pages. (also warn of pages that need content because they're new, provide future maintainers with a template for teacher and room pages)
 
 Make a privacy policy (terms of service?)
+
+On teacher pages, make it say mr or mrs teacher instead of full name
